<resources>
    <string name="app_name">Clue Cheater</string>
    <string name="txt_setPlayers">Set Players</string>
    <string name="txt_startNewGame">Start New Game</string>
    <string name="txt_setPlayerNumber">Player number: (4-6 players)</string>
    <string name="txt_player">Player</string>
    <string name="txt_makeSuggestion">Make Suggestion</string>
    <string name="txt_setMyCards">Set My Cards</string>
    <string name="checkBox_me">It\'s me</string>
    <string-array name="characterNames_array">
        <item>Scarlet</item>
        <item>Mustard</item>
        <item>Green</item>
        <item>Peacock</item>
        <item>Plum</item>
        <item>White</item>
    </string-array>
    <string name="title_activity_set_player_character_name">SetPlayerCharacterName</string>
    <string name="action_settings">Settings</string>
    <string name="btn_next">Next</string>
</resources>
